<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">GPS应用</string>
	<string name="helloApp">欢迎使用GPS应用</string>
	<string name="speedName">GPS速度计</string>
    <string name="helloSpeed">欢迎使用GPS速度计软件</string>
    <string name="GPSState">GPS状态:</string>
    <string name="GPSStateOn">打开</string>
    <string name="GPSStateOnText">已打开</string>
    <string name="GPSStateOff">关闭</string>
    <string name="GPSStateOffText">已关闭,点击按钮打开</string>
    <string name="refreshTime">刷新时间:</string>
    <string name="longitude">经度:</string>
    <string name="latitude">纬度:</string>
    <string name="altitude">海拔:</string>
    <string name="horizontalSpeed">水平速度:</string>
    <string name="verticalitySpeed">垂直速度:</string>
    <string name="scrollViewTimeText">时间</string>
    <string name="scrollViewSpeedText">速度</string>
    <string name="setting">设置</string>
    <string name="speedUnit">速度单位:</string>
    <string name="speedUnitMS">M/s</string>
    <string name="speedUnitKMH">Km/h</string>
    <string name="timeUnit">秒</string>
    <string name="about">关于</string>
    <string name="version">版本</string>
    <string name="aboutAuthor">张超的毕业设计作品</string>
    <string name="aboutApp">GPS应用程序</string>
    <string name="aboutSpeedApp">GPS速度计,利用GPS得到速度</string>
    <string name="backToMain">返回主界面</string>
    <string name="openRecord">打开记录</string>
    <string name="showRecord">显示记录</string>
    <string name="noRecord">无记录</string>
    <string name="recordIndex">序号</string>
    <string name="choiceRecordName">选择记录名称</string>
    <string name="saveRecord">保存记录</string>
    <string name="typeRecordName">输入记录名称</string>
    <string name="backTip">是否返回主界面?</string>
	<string name="areaName">GPS面积测量</string>
	<string name="precision">测量精度:</string>
	<string name="meticulous">精细</string>
	<string name="normal">一般</string>
    <string name="rough">粗略</string>
    <string name="areaUnit">面积单位:</string>
    <string name="areaUnitM">平方米</string>
    <string name="areaUnitKM">平方千米</string>
    <string name="areaUnitHectare">公顷</string>
    <string name="totalArea">总面积为:</string>
    <string name="measuring">测量中...</string>
    <string name="showList">列表显示</string>
    <string name="showView">视图显示</string>
    <string name="helloArea">欢迎使用GPS面积测量软件</string>
    <string name="aboutAreaApp">利用GPS测量一块区域的面积</string>
    <string name="start">开始</string>
    <string name="stop">停止</string>
    <string name="exit">退出</string>
    <string name="exitTip">是否退出?</string>
    <string name="OK">确定</string>
    <string name="Cancel">取消</string>
    <string name="Delete">删除</string>
    <string name="Back">返回</string>
    <string name="Sava">保存</string>
</resources>
