<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android"
>
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/precision"
		android:layout_marginTop="5px"
		android:layout_marginBottom="2px"
		android:textSize="20sp"
	></TextView>
	<RelativeLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="20px"
	>
		<!-- 精度单选框组 -->
		<RadioGroup
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:id="@+id/precisionRadioGroup"
		>
			<RadioButton
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/meticulous"
				android:text="@string/meticulous"
				android:layout_margin="5px"
			></RadioButton>
			<RadioButton
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/normal"
				android:text="@string/normal"
				android:layout_margin="5px"
			></RadioButton>
			<RadioButton
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/rough"
				android:text="@string/rough"
				android:layout_margin="5px"
			></RadioButton>
		</RadioGroup>
	</RelativeLayout>
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/areaUnit"
		android:layout_marginTop="2px"
		android:layout_marginBottom="5px"
		android:textSize="20sp"
	></TextView>
	<RelativeLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	>
		<!-- 单位单选框组 -->
		<RadioGroup
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:id="@+id/areaUnitRadioGroup"
		>
			<RadioButton
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/areaUnitM"
				android:text="@string/areaUnitM"
				android:layout_margin="5px"
			></RadioButton>
			<RadioButton
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/areaUnitH"
				android:text="@string/areaUnitHectare"
				android:layout_margin="5px"
			></RadioButton>
			<RadioButton
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/areaUnitKM"
				android:text="@string/areaUnitKM"
				android:layout_margin="5px"
			></RadioButton>
		</RadioGroup>
	</RelativeLayout>
	<!-- 保存 返回 按钮 -->
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="5px"
	>
		<Button
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/Sava"
			android:id="@+id/areaSaveSettingBtn"
		></Button>
		<Button
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/Back"
			android:id="@+id/areaBackSettingBtn"
		></Button>
	</LinearLayout>
</LinearLayout>

