<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
>   <!-- 测量精度 -->
	<RelativeLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/precision"
			android:textSize="20sp"
		></TextView>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/precisionTextView"
			android:layout_alignParentRight="true"
			android:textSize="20sp"
		></TextView>
	</RelativeLayout>
	<!-- 经度 纬度 -->
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="2px"
	>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/longitude"
			android:textSize="20sp"
		></TextView>
		<TextView
			android:layout_width="100px"
			android:layout_height="wrap_content"
			android:id="@+id/areaLngTextView"
			android:textSize="20sp"
		></TextView>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="20dip"
			android:text="@string/latitude"
			android:textSize="20sp"
		></TextView>
		<TextView
			android:layout_width="100px"
			android:layout_height="wrap_content"
			android:id="@+id/areaLatTextView"
			android:textSize="20sp"
		></TextView>
	</LinearLayout>
	<!-- 开始以及停止按钮 -->
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	>
		<Button
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/start"
			android:id="@+id/areaStartBtn"
		></Button>
		<Button
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/stop"
			android:id="@+id/areaStopBtn"
		></Button>
	</LinearLayout>
	<!-- 总面积显示 -->
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="2px"
	>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:id="@+id/areaTotalAreaTextView"
			android:textSize="20sp"
		></TextView>
	</LinearLayout>
	<!-- 面积的概览图 -->
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	>
		<com.Jerry.GPSArea.AreaView
			android:id="@+id/areaView"
			android:layout_width="wrap_content"
			android:layout_height="200px"
		></com.Jerry.GPSArea.AreaView>
	</LinearLayout>
	<!-- 打开记录按钮 保存记录按钮 -->
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="5px"
	>
		<Button
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/openRecord"
			android:id="@+id/openRecordBtn"
		></Button>
		<Button
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/saveRecord"
			android:id="@+id/saveRecordBtn"
		></Button>
	</LinearLayout>
	<!-- 设置按钮 返回主界面按钮 -->
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	>
		<Button
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/setting"
			android:id="@+id/areaSettingBtn"
		></Button>
		<Button
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/backToMain"
			android:id="@+id/areaBackBtn"
		></Button>
	</LinearLayout>
</LinearLayout>