<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android"
>
	<!-- 标题 -->
	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/helloApp"
		android:textSize="20sp"
	></TextView>
	<!-- GPS状态 以及 开关 -->
	<RelativeLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerVertical="true"
			android:id="@+id/GPSState"
			android:text="@string/GPSState"
			android:textSize="18sp"
		></TextView>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerVertical="true"
			android:id="@+id/GPSStateText"
			android:layout_toRightOf="@id/GPSState"
			android:textSize="18sp"
		></TextView>
		<ToggleButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/GPSStateToggleBtn"
			android:layout_alignParentRight="true"
			android:textOff="@string/GPSStateOff"
			android:textOn="@string/GPSStateOn"
		></ToggleButton>
	</RelativeLayout>
	<!--选择按钮 图片按钮 使用Table视图 -->
	<TableLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginRight="10px"
		android:layout_marginLeft="10px"
		android:layout_marginBottom="10px"
		android:padding="10px"
	>
		<TableRow>
			<LinearLayout
				android:orientation="vertical"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/speedLayBtn"
				android:layout_weight="1"
				android:paddingTop="10px"
				android:paddingBottom="10px"
				android:layout_marginRight="20px"
				android:focusable="true"
			>
				<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:src="@drawable/speedicon"
					android:layout_gravity="center"
				></ImageView>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/speedName"
					android:textSize="18sp"
					android:layout_gravity="center"
				></TextView>
			</LinearLayout>
			<LinearLayout
				android:orientation="vertical"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:id="@+id/areaLayBtn"
				android:layout_weight="1"
				android:paddingTop="10px"
				android:paddingBottom="10px"
				android:layout_marginLeft="20px"
				android:focusable="true"
			>
				<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:src="@drawable/areaicon"
					android:layout_gravity="center"
				></ImageView>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/areaName"
					android:textSize="18sp"
					android:layout_gravity="center"
				></TextView>
			</LinearLayout>
		</TableRow>
	</TableLayout>
	<!-- 关于按钮 退出按钮 -->
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	>
		<Button
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/about"
			android:id="@+id/aboutAppBtn"
		></Button>
		<Button
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/exit"
			android:id="@+id/exitBtn"
		></Button>
	</LinearLayout>
</LinearLayout>

