<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
>
	<!-- 刷新时间 -->
	<RelativeLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/refreshTime"
			android:textSize="20sp"
		></TextView>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/refreshTimeTextView"
			android:layout_alignParentRight="true"
			android:textSize="20sp"
		></TextView>
	</RelativeLayout>
	<!-- 经度 纬度 -->
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/longitude"
			android:textSize="20sp"
		></TextView>
		<TextView
			android:layout_width="110px"
			android:layout_height="wrap_content"
			android:id="@+id/speedLngTextView"
			android:textSize="20sp"
		></TextView>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="5dip"
			android:text="@string/latitude"
			android:textSize="20sp"
		></TextView>
		<TextView
			android:layout_width="110px"
			android:layout_height="wrap_content"
			android:id="@+id/speedLatTextView"
			android:textSize="20sp"
		></TextView>
	</LinearLayout>
	<!-- 水平速度 -->
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/horizontalSpeed"
			android:textSize="30sp"
		></TextView>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textSize="30sp"
			android:id="@+id/horSpeedTextView"
		></TextView>
	</LinearLayout>
	<!-- 速度统计 -->
	<!-- 滚动视图上面的提示文字 -->
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/scrollViewTimeText"
			android:layout_marginLeft="20dip"
			android:textSize="20sp"
		></TextView>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/scrollViewSpeedText"
			android:layout_marginLeft="150dip"
			android:textSize="20sp"
		></TextView>
	</LinearLayout>
	<!-- 滚动视图 -->
	<ScrollView
		android:id="@+id/ScrollView"
		android:layout_width="fill_parent"
		android:layout_height="200px"
		android:scrollbars="vertical"
		android:layout_weight="1"
		android:layout_marginBottom="5dip"
	>
		<LinearLayout
			android:id="@+id/Layout"
			android:orientation="vertical"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
		>
		</LinearLayout>
	</ScrollView>
	<!-- 设置按钮 退出按钮 -->
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:id="@+id/opBtn"
	>
		<Button
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/setting"
			android:id="@+id/speedSettingBtn"
		></Button>
		<Button
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/backToMain"
			android:id="@+id/speedBackBtn"
		></Button>
	</LinearLayout>
</LinearLayout>