<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
>
	<TabHost
		android:id="@android:id/tabhost"
		android:layout_width="fill_parent"
		android:layout_height="350px"
	>
		<LinearLayout
			android:orientation="vertical"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
		>
			<TabWidget
				android:id="@android:id/tabs"
				android:layout_width="fill_parent"
				android:layout_height="55px"
				android:gravity="center_vertical"
			></TabWidget>
			<FrameLayout
				android:id="@android:id/tabcontent"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
			>
				<!-- 滚动列表ListView -->
				<LinearLayout
					android:orientation="vertical"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:id="@+id/listViewLayout"
				>
					<!-- 滚动视图上面的提示文字 -->
					<LinearLayout
						android:orientation="horizontal"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
					>
						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/recordIndex"
							android:layout_marginLeft="5dip"
							android:textSize="20sp"
						></TextView>
						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/longitude"
							android:layout_marginLeft="30dip"
							android:textSize="20sp"
						></TextView>
						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/latitude"
							android:layout_marginLeft="80dip"
							android:textSize="20sp"
						></TextView>
					</LinearLayout>
					<ListView
						android:id="@+id/recordListView"
						android:layout_width="fill_parent"
						android:layout_height="fill_parent"
						android:scrollbars="vertical"
					></ListView>
				</LinearLayout>

				<!--自定义的view视图 -->
				<com.Jerry.GPSArea.AreaView
					android:layout_width="fill_parent"
					android:layout_height="fill_parent"
					android:id="@+id/recordAreaView"
				></com.Jerry.GPSArea.AreaView>
			</FrameLayout>
		</LinearLayout>
	</TabHost>
	<!-- 面积显示文本 -->
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@android:id/tabhost"
	>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/recordTotalArea"
			android:text="@string/totalArea"
			android:layout_marginLeft="5dip"
			android:textSize="20sp"
		></TextView>
	</LinearLayout>
	<!-- 打开记录 以及 返回 按钮 -->
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
	>
		<Button
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/openRecord"
			android:id="@+id/areaRecordOpen"
			android:layout_weight="1"
		></Button>
		<Button
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/Back"
			android:id="@+id/areaRecordBack"
			android:layout_weight="1"
		></Button>
	</LinearLayout>
</RelativeLayout>
